Fix issue with css styling not showing. Added additional gretting text. Refactor historical page to about page.

--- a/client/src/Components/Components.modules.css
+++ b/client/src/Components/Components.modules.css
@@ -31,7 +31,7 @@
 }
 
 .header-1 {
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 .f-1 {
